--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="js/angular.min.js"></script>
+<script src="js/App.js"></script>
 </head>
 <body>
   <app-root></app-root>
