added dropzone functionality

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
+  <link rel="stylesheet" href="https://unpkg.com/dropzone/dist/min/dropzone.min.css" />
+
 </head>
 <body>
   <app-root>Loading...</app-root>
